# MX_UpstairTrajOptim

./: README.md
test_ipopt_cmake/: CMakeLists.txt
test_ipopt_cmake/cmake/: MX_Config.cmake
test_ipopt_cmake/include/: mx_fivePoly.h  mx_nlp_ankleTraj.h
test_ipopt_cmake/src/: mx_fivePoly.cpp  mx_nlp_ankleTraj.cpp
test_ipopt_cmake/test/: test.cpp
upstairs_matlab/: MAIN_test_gradient_highStair.m
upstairs_matlab/poly5/: autoGen_fiveOrderPolyCoeff.m  getFiveOrderPoly.m  getFivePolyCoeff.m
upstairs_matlab/poly5/gradients/: autoGen_jacobianAll6.m  autoGen_jacobianLeft3.m  autoGen_jacobianRight3.m
